// Copyright 2025 Logan Magee
//
// SPDX-License-Identifier: AGPL-3.0-only

syntax = "proto3";

package accrescent.events.v1;

import "accrescent/events/v1/app_edit.proto";

option java_multiple_files = true;
option java_package = "app.accrescent.events.v1";

// Event indicating that a new app edit publication has been requested.
message AppEditPublicationRequested {
  // The metadata corresponding to the edit to publish.
  AppEdit edit = 1;
}
